[build-system]
requires = [
    'setuptools ~= 75.3',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'betty-demo-latest'
version = '0.0.0'
authors = [
  {name = 'Bart Feenstra', email = 'bar@bartfeenstra.com'},
]
requires-python = '~= 3.12'
dependencies = [
    'betty ~= 0.5.0a42',
]

[tool.setuptools.packages.find]
where = ['.']
